add drop-menu, social box and animations

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Cinzel:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mobile.css">
   <title>Spartan | MMA GYM</title>
@@ -18,15 +20,37 @@
       <div class="container">
         <div class="navbar-content">
           <div class="logo">
-            <img src="img/logo-red.png" alt="spartan-logo">
-            <h1>SPARTAN MMA</h1>
+            <a href="index.html"><img src="img/logo-red.png" alt="spartan-logo">
+            <h1>SPARTAN MMA</h1></a>
           </div>
           <div class="navigation">
             <ul class="nav-list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Schedule</a></li>
-              <li><a href="#">Join</a></li>
+              <li><a href="#showcase">Home</a></li>
+              <li><a href="#about">About</a>
+                <ul class="nav-sublist">
+                  <li><a href="">Overview</a></li>
+                  <li><a href="">Location</a></li>
+                  <li><a href="">Committee</a></li>
+                  <li><a href="">Achievements</a></li>
+                  <li><a href="">FAQ</a></li>
+                  <li><a href="">Inquire</a></li>
+                </ul>
+              </li>
+              <li><a href="#schedule">Schedule</a>
+                <ul class="nav-sublist">
+                  <li><a href="">Training</a></li>
+                  <li><a href="">Events</a></li>
+                  <li><a href="">Seminars/Workshops</a></li>
+                  <li><a href="">Tournaments</a></li>
+                </ul>
+              </li>
+              <li><a href="#join">Join</a>
+                <ul class="nav-sublist">
+                  <li><a href="">Trial Class</a></li>
+                  <li><a href="">Pricing</a></li>
+                  <li><a href="">Terms & Conditions</a></li>
+                </ul>
+              </li> 
             </ul>
           </div>
         </div>
@@ -36,8 +60,15 @@
     <section id="showcase">
       <div class="hero-image">
       </div>
+      <div class="social-box">
+        <a href="http://facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="http://youtube.com"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="http://instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="http://twitter.com"><i class="fab fa-twitter fa-2x"></i></a>      
+      </div>
     </section>
   </header>
+
   <main>
 
   </main>
